--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,7 @@ article p {
   #flexb p:last-of-type {
     align-self: baseline;
     height: unset;
+    min-height: 236.5px;
   }
 }
 @media only screen and (max-width: 993px) {
