--- a/css/styles.css
+++ b/css/styles.css
@@ -106,9 +106,9 @@ footer {
 #sticky {
   background-attachment: fixed;
   background-blend-mode: screen;
-  background-size: 100% 100%;
+  background-size: 100%;
   background-image: url(../images/sticky.jpg);
-  height: 600px;
+  padding: 18% 12%;
 }
 
 article {
@@ -151,8 +151,7 @@ article p {
     padding: 5%;
   }
 
-  header,
-#sticky {
+  header {
     height: 275px;
   }
 
@@ -266,6 +265,7 @@ article p {
 
   #sticky {
     background-attachment: unset;
+    background-size: 100% 100%;
   }
 
   article {
