--- a/css/styles.scss
+++ b/css/styles.scss
@@ -87,6 +87,7 @@ footer {
   flex-wrap: wrap;
   padding: 20px 20px 75px 20px;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 #flexb h2 {
@@ -101,17 +102,17 @@ footer {
 #flexb p {
   height: 472px;
   line-height: 2;
-  padding: 40px 75px 0 75px;
-  width: 75%;
+  padding: 40px 5% 0 5%;
+  width: 62.5%;
   text-align: center;
 }
 
 #sticky {
   background-attachment: fixed;
   background-blend-mode: screen;
-  background-size: 100%;
+  background-size: 100% 100%;
   background-image: $stickyimg;
-  padding: 16% 9%;
+  padding: 19.2% 10.8%;
 }
 
 article {
@@ -131,12 +132,6 @@ article h2 {
 article p {
   padding: 50px 50px;
   align-self: baseline;
-}
-
-@media only screen and (max-width: 1380px) {
-  #flexb p {
-    width: 62.5%;
-  }
 }
 
 @media only screen and (min-width: 993px) {
@@ -160,6 +155,7 @@ article p {
   #flexb {
     flex-direction: column;
     padding: 5%;
+    justify-content: unset;
   }
   #flexb p:nth-child(19) {
     order: 21;
@@ -241,7 +237,6 @@ article p {
   }
   #sticky {
     background-attachment: unset;
-    background-size: 100% 100%;
   }
   article {
     padding: 5%;
