--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,8 @@ article p {
     flex-direction: column;
     padding: 5%;
     justify-content: unset;
+    flex-wrap: unset;
+    align-items: unset;
   }
 
   #flexb p:nth-child(19) {
