--- a/css/variables.scss
+++ b/css/variables.scss
@@ -16,6 +16,7 @@ $stickyimg: url(../images/sticky.jpg);
 $stickyblend: screen;
 $imageBgAspect: 19.2% 10.8%;
 
-
 $paddingmobile: 5%;
 
+$iconheight: 200px;
+$stickypheight: 472px;
