--- a/css/styles.scss
+++ b/css/styles.scss
@@ -95,12 +95,12 @@ footer {
 }
 
 #flexb img {
-  width: 200px;
+  width: $iconheight;
   align-self: center;
 }
 
 #flexb p {
-  height: 472px;
+  height: $stickypheight;
   line-height: 2;
   padding: 40px 5% 0 0;
   width: 62.5%;
@@ -136,12 +136,12 @@ article p {
 
 @media only screen and (min-width: 993px) {
   #flexb img:last-of-type {
-    padding: 136.5px 0;
+    padding: $stickypheight / 2 - $iconheight / 2 0;
   }
   #flexb p:last-of-type {
     align-self: baseline;
     height: unset;
-    min-height: 236.5px;
+    min-height: $stickypheight / 2;
   }
 }
 
