--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,5 +1,5 @@
 $font: sans-serif;
-$fontsize: larger;
+$fontsize: large;
 
 $headingtxt: ghostwhite;
 $h2: mediumslateblue;
@@ -18,5 +18,4 @@ $imageBgAspect: 19.2% 10.8%;
 
 $paddingmobile: 5%;
 
-$iconheight: 200px;
 $stickypheight: 472px;
