--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ footer {
 #flexb {
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 20px 75px 20px;
+  padding: 0;
   align-items: center;
   justify-content: space-evenly;
 }
@@ -100,8 +100,8 @@ footer {
 #flexb p {
   height: 500px;
   line-height: 2;
-  padding: 40px 5% 0 0;
-  width: 62.5%;
+  padding: 1.5% 2.25% 0 2.25%;
+  width: 62%;
   text-align: center;
 }
 
