--- a/css/variables.scss
+++ b/css/variables.scss
@@ -16,7 +16,16 @@ $stickyimg: url(../images/sticky.jpg);
 $stickyblend: screen;
 $imageBgAspect: 19.2% 10.8%;
 
-$paddingmobile: 5%;
+
 
 $stickypheight: 500px;
+$stickyppadding: 1.5% 2.25% 0 2.25%;
+$stickypwidth: 62%;
+
 $iconpading: 25px;
+
+$paddingmobile: 5%;
+
+
+
+
