--- a/css/variables.scss
+++ b/css/variables.scss
@@ -14,6 +14,7 @@ $headerBgAspect: 0 6% 18% 6%;
 
 $stickyimg: url(../images/sticky.jpg);
 $stickyblend: screen;
+$stickyblendcolor: #bf134999;
 $imageBgAspect: 19.2% 10.8%;
 
 
