--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,13 +1,13 @@
 $font: sans-serif;
 $fontsize: large;
 
-$headingtxt: ghostwhite;
-$h2: mediumslateblue;
-$p: mintcream;
-$li: lightslategray;
+$headingtxt: #bf134999;
+$h2: #f9c0c3 ;
+$p: aliceblue;
+$li: mintcream;
 
-$bg1:#c4a4f2;
-$bg2:#dabfff;
+$bg1:#6e46dd;
+$bg2:#7B25CB;
 
 $headerimg: url(../images/ban.jpg);
 $headerBgAspect: 0 6% 18% 6%;
