--- a/css/variables.scss
+++ b/css/variables.scss
@@ -2,12 +2,12 @@ $font: sans-serif;
 $fontsize: large;
 
 $headingtxt: #bf134999;
-$h2: #f9c0c3 ;
-$p: aliceblue;
+$h2: #f9c0c3;
+$p: white;
 $li: mintcream;
 
 $bg1:#6e46dd;
-$bg2:#7B25CB;
+$bg2:#9071e5;
 
 $headerimg: url(../images/ban.jpg);
 $headerBgAspect: 0 6% 18% 6%;
