--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,7 +1,7 @@
 $font: sans-serif;
 $fontsize: large;
 
-$headingtxt: #bf134999;
+$headingtxt: #bf1349;
 $h2: #f9c0c3;
 $p: white;
 $li: mintcream;
@@ -14,7 +14,7 @@ $headerBgAspect: 0 6% 18% 6%;
 
 $stickyimg: url(../images/sticky.jpg);
 $stickyblend: screen;
-$stickyblendcolor: #bf134999;
+$stickyblendcolor: #610a26;
 $imageBgAspect: 19.2% 10.8%;
 
 
