--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,6 @@ footer {
 
 #sticky {
   background-attachment: fixed;
-  background-color: #610a26;
-  background-blend-mode: screen;
   background-size: cover;
   background-position: center;
   background-image: url(../images/sticky.jpg);
@@ -233,6 +231,9 @@ article p {
   .s {
     position: relative;
     top: unset;
+  }
+  #sticky {
+    background-attachment: unset;
   }
   article {
     padding: 5%;
