--- a/css/variables.scss
+++ b/css/variables.scss
@@ -15,7 +15,7 @@ $headerBgAspect: 0 6% 18% 6%;
 $stickyimg: url(../images/sticky.jpg);
 $imageBgAspect: 19.2% 10.8%;
 
-
+$stickyblendcolor: #610a26;
 
 $stickypheight: 500px;
 $stickyppadding: 1.5% 2.25% 0 2.25%;
