--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,5 +1,5 @@
 @import "./variables.scss";
-/* css */;
+/* css */
 
 * {
   box-sizing: border-box;
@@ -31,7 +31,7 @@ header {
   background-blend-mode: screen;
   background-size: 100% 100%;
   background-image: $headerimg;
-  padding: $headerBgAspect
+  padding: $headerBgAspect;
 }
 
 header h1 {
@@ -72,7 +72,7 @@ footer {
   align-items: center;
 }
 
-/* main */;
+/* main */
 
 .s {
   position: sticky;
@@ -115,6 +115,17 @@ footer {
   background-position: center;
   background-image: $stickyimg;
   padding: $imageBgAspect;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: $stickyblendcolor;
+    opacity: 0.2;
+  }
 }
 
 article {
