--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,7 @@ $bg1:#6e46dd;
 $bg2:#9071e5;
 
 $headerimg: url(../images/ban.jpg);
-$headerBgAspect: 0 6% 18% 6%;
+$headerBgAspect: 0 0 18% 0;
 
 $stickyimg: url(../images/sticky.jpg);
 $imageBgAspect: 19.2% 10.8%;
