--- a/scss/partials/_font.scss
+++ b/scss/partials/_font.scss
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: "OpenSans";
-    src: url(../font/OpenSans.ttf);
+    font-family: "NunitoSans";
+    src: url(../font/NunitoSans.ttf);
     font-display: swap;
 }
 
 
-$font: "OpenSans";
+$font: "NunitoSans";
 
 $fontsize: large;
