--- a/scss/app.scss
+++ b/scss/app.scss
@@ -44,6 +44,19 @@ header h1 {
   padding: 50px;
 }
 
+li {
+  display: inline;
+  line-height: 75px;
+  color: $li;
+  padding: 20px;
+}
+
+li a {
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
 footer {
   background-image: linear-gradient(to bottom, $bg1, $bg2 90%);
   height: 200px;
