--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,18 +1,18 @@
-$headingtxt: #bf1349;
-$h2: #f9c0c3;
+$headingtxt:  mintcream;
+$h2: mintcream;
 $p: white;
 $li: mintcream;
 
-$bg1:#6e46dd;
-$bg2:#9071e5;
+$bg1:#46B1C9;
+$bg2:mintcream;
+$bg3:#46B1C9;
 
-$headerimg: url(../images/ban.jpg);
-$headerBgAspect: 0 0 18% 0;
+$headerBgAspect: 0 0 13.75% 0;
 
-$stickyimg: url(../images/sticky.jpg);
+$stickyimg: url(../images/sticky.webp);
 $imageBgAspect: 19.2% 10.8%;
 
-$stickyblendcolor: #610a26;
+$stickyblendcolor: #46B1C9;
 
 $stickypheight: 500px;
 $stickyppadding: 1.5% 2.25% 0 2.25%;
