--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,7 +7,7 @@ $bg1:#46B1C9;
 $bg2:mintcream;
 $bg3:#46B1C9;
 
-$headerBgAspect: 0 0 15.75% 0;
+$headerBgAspect: 0;
 
 $stickyimg: url(../images/sticky.webp);
 $imageBgAspect: 19.2% 10.8%;
