--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,9 @@
-$headingtxt:  mintcream;
-$h2: mintcream;
-$p: mintcream;
-$li: mintcream;
+
+$heading: #383838;
+$p: #383838;
 
 $bg1:#46B1C9;
-$bg2:mintcream;
+$bg2:snow;
 $bg3:#46B1C9;
 
 $headerBgAspect: 0;
