--- a/scss/app.scss
+++ b/scss/app.scss
@@ -19,13 +19,15 @@ article {
   padding: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 500;
   font-size: 17px;
 }
 
+h1,
 h2 {
-  color: $h2;
+  color: $heading;
 }
 
 p {
@@ -39,14 +41,16 @@ header {
 }
 
 header h1 {
-  color: $headingtxt;
+  color: $heading;
   padding: 50px;
 }
 
-
 footer {
-  background-image: linear-gradient(to bottom, $bg1, $bg2 90%);
-  height: 200px;
+  background-image: linear-gradient(to bottom, $bg1, $bg2 100%);
+  height: 325px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* main */
@@ -78,6 +82,7 @@ footer {
   width: calc($stickypheight / 2);
   align-self: center;
   padding: $iconpading;
+  filter: invert(63%) contrast(188%);
 }
 
 #flexb p {
@@ -121,12 +126,7 @@ article h2 {
   align-self: flex-start;
 }
 
-article p {
-  padding: 50px 50px;
-  align-self: baseline;
-}
-
-@include min_lg { 
+@include min_lg {
   #flexb img:last-of-type {
     margin: calc($stickypheight / 4) 0;
   }
@@ -137,7 +137,7 @@ article p {
   }
 }
 
-@include max_lg { 
+@include max_lg {
   header h1 {
     padding: $paddingmobile;
   }
@@ -231,8 +231,5 @@ article p {
   }
   article {
     padding: $paddingmobile;
-  }
-  article p {
-    padding: $paddingmobile $paddingmobile;
   }
 }
