--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,6 +17,6 @@ $stickypheight: 500px;
 $stickyppadding: 1.5% 2.25% 0 2.25%;
 $stickypwidth: 62%;
 
-$iconpading: 25px;
+$iconmargin: 25px;
 
 $paddingmobile: 5%;
