--- a/scss/app.scss
+++ b/scss/app.scss
@@ -55,6 +55,44 @@ footer {
   align-items: center;
 }
 
+/* fallback */
+
+#fallback {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 1.5rem;
+  min-height: 100vh;
+  width: 100%;
+  box-sizing: border-box;
+  background-color: transparent;
+  img {
+      display: block;
+      margin: 0 auto;
+  }
+  h1 {
+      text-align: center;
+      font-size: 18px;
+      font-weight: 400;
+      color: $p;
+      margin: 0 0 1rem 0;
+  }
+  #go-back {
+      display: block;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 400;
+      border: 1px solid $p;
+      border-radius: 20px;
+      background: transparent;
+      outline: none;
+      color: $p;
+      padding: 1px 6px;
+  }
+}
+
+
 /* main */
 
 .sticky {
