--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,7 +14,7 @@ $imageBgAspect: 19.2% 10.8%;
 $stickyblendcolor: #46B1C9;
 
 $stickypheight: 500px;
-$stickyppadding: 1.5% 2.25% 0 2.25%;
+$stickyppadding: 20px 2.25% 0 2.25%;
 $stickypwidth: 62%;
 
 $iconmargin: 25px;
